[project]
name = "karma-farmer"
version = "0.1.0"
description = "Smart Realistic AI Agent"
authors = [
    {name = "Payam Yektamaram",email = "payamyek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
