[project]
name = "karma-farmer"
version = "0.1.0"
description = "Smart Realistic AI Agent"
authors = [
    {name = "Payam Yektamaram",email = "payamyek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "praw (>=7.8.1,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.7"
